# DataExtractor

./: CMakeLists.txt  LICENSE
DataExtractor/: DataExtractor.hpp
Test/: CMakeLists.txt
Test/test_cases/: ExampleTest.cpp
